fixed spacing of spend dashboard

--- a/desktop.css
+++ b/desktop.css
@@ -100,3 +100,17 @@ svg {
 .resumebutton:hover {
   opacity: 1
 }
+
+ .container {
+  margin:auto;
+    position: relative;
+     width: 45%;
+     padding-bottom: 60%;
+ }
+ .video {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 130%;
+ }
