--- a/mobile.css
+++ b/mobile.css
@@ -95,3 +95,17 @@ a:active {
 .icon {
     max-width: 60%;
 }
+
+ .container {
+    position: relative;
+     width: 100%;
+     height: 180%;
+     padding-bottom: 60%;
+ }
+ .video {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 300%;
+ }
